name:                reflex-indexed-db
version:             0.1.0.8
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/reflex-indexdb#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.IDB
  build-depends:       base            >= 4.7 && < 5
                     , ghcjs-dom
                     , text
                     , aeson
                     , bytestring
                     , transformers    >= 0.4
                     , free            >= 4.12
                     , dependent-map   >= 0.2
                     , data-default    >= 0.5
                     , jsaddle
                     , ref-tf          >= 0.4
                     , reflex          >= 0.6 && < 0.8
                     , reflex-dom-core >= 0.5 && < 0.7
                     , stm
                     , lens
  default-language:    Haskell2010

test-suite reflex-indexdb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , ghcjs-dom
                     , reflex-indexed-db
                     , reflex-dom
                     , text
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/reflex-indexdb
